fix(icon-list): improved spacing

--- a/express/blocks/icon-list/icon-list.css
+++ b/express/blocks/icon-list/icon-list.css
@@ -57,7 +57,6 @@ main .icon-list h3, main .icon-list h4 {
 main .section-wrapper.icon-list-highlight-container {
   border-top: 12px solid black;
   border-image: var(--gradient-highlight-horizontal) 1;
-  padding-top: 0;
   margin-top: 120px;
   border-left: 0;
   border-bottom: 0;
@@ -85,7 +84,6 @@ main .icon-list > div.icon-list-column > div {
 
 main .icon-list .icon-list-heading {
   min-height: 100px;
-  margin-bottom: 56px;
 }
 
 main .icon-list .icon-list-heading .icon-list-image {
@@ -111,7 +109,6 @@ main .icon-list .icon-list-heading .icon-list-image img, main .icon-list .icon-l
 }
 
 main .icon-list .icon-list-regular {
-  min-height: 152px;
   margin-top: 80px;
   margin-bottom: 0;
 }
@@ -146,7 +143,7 @@ main .icon-list.highlight .icon-list-regular .icon-list-image svg {
 
 main .section-wrapper.icon-list-two-column-container > div {
   max-width: unset;
-  padding: 120px 16px;
+  padding: 60px 32px;
 }
 
 main .icon-list a:not(.button):any-link {
@@ -166,15 +163,13 @@ main .icon-list a:not(.button):any-link {
   }
 
   main .section-wrapper.icon-list-two-column-container > div {
-    max-width: unset;
-    padding: 120px 44px;
+    max-width: 1122px;
   }  
 }
 
 @media (min-width:1200px) {
   main .section-wrapper.icon-list-two-column-container > div {
     max-width: 1200px;
-    padding: 120px 88px;
   }
 }
 
